--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
+.container-parent {
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    padding: 0 30px; 
+  }
+
+.container-parent::before {
+    content: "";
+    position: absolute;
+    top: 130px;
+    left: 5;
+    width: calc(100% - 170px);
+    height: 18px;
+    background-color: black;
+    transform: translateY(-50%);
+    z-index: -1;
+}
+
+.container{
+    width: 70px;
+    height: 250px;
+    background-color: black;
+    margin: 0 5px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.color-default{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #353535;
+}
+
+.red{
+    background-color: red;
+}
+
+.yellow{
+    background-color: yellow;
+}
