--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,40 @@
+<button (click)="changeColor()">Cambio de color</button>
+
 <div class="container-parent">
 
   <div class="container">
-    <article class="color-default"></article>
-    <article class="color-default"></article>
-    <article class="color-default red"></article>
-    <article class="color-default red"></article>
+    <article id="" class="color-default"></article>
+    <article id="" class="color-default"></article>
+    <article id="light1" class="color-default"></article>
+    <article id="light2" class="color-default"></article>
   </div>
 
   <div class="container">
-    <article class="color-default"></article>
-    <article class="color-default"></article>
-    <article class="color-default red"></article>
-    <article class="color-default red"></article>
+    <article id="" class="color-default"></article>
+    <article id="" class="color-default"></article>
+    <article id="light3" class="color-default"></article>
+    <article id="light4" class="color-default"></article>
   </div>
 
   <div class="container">
-    <article class="color-default"></article>
-    <article class="color-default"></article>
-    <article class="color-default red"></article>
-    <article class="color-default red"></article>
+    <article id="" class="color-default"></article>
+    <article id="" class="color-default"></article>
+    <article id="light5" class="color-default"></article>
+    <article id="light6" class="color-default"></article>
   </div>
 
   <div class="container">
-    <article class="color-default"></article>
-    <article class="color-default"></article>
-    <article class="color-default red"></article>
-    <article class="color-default red"></article>
+    <article id="" class="color-default"></article>
+    <article id="" class="color-default"></article>
+    <article id="light7" class="color-default"></article>
+    <article id="light8" class="color-default"></article>
   </div>
 
   <div class="container">
-    <article class="color-default"></article>
-    <article class="color-default"></article>
-    <article class="color-default red"></article>
-    <article class="color-default red"></article>
+    <article id="" class="color-default"></article>
+    <article id="" class="color-default"></article>
+    <article id="light9" class="color-default"></article>
+    <article id="light10" class="color-default"></article>
   </div>
-  
+
 </div>
