v4 Secuencias de semáforos verde
Se agrego la secuencias de semáforos verde al momento de terminar la secuencia de semáforos rojos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,36 +3,36 @@
 <div class="container-parent">
 
   <div class="container">
-    <article id="" class="color-default"></article>
-    <article id="" class="color-default"></article>
+    <article id="lightG1" class="color-default"></article>
+    <article id="lightG2" class="color-default"></article>
     <article id="light1" class="color-default"></article>
     <article id="light2" class="color-default"></article>
   </div>
 
   <div class="container">
-    <article id="" class="color-default"></article>
-    <article id="" class="color-default"></article>
+    <article id="lightG3" class="color-default"></article>
+    <article id="lightG4" class="color-default"></article>
     <article id="light3" class="color-default"></article>
     <article id="light4" class="color-default"></article>
   </div>
 
   <div class="container">
-    <article id="" class="color-default"></article>
-    <article id="" class="color-default"></article>
+    <article id="lightG5" class="color-default"></article>
+    <article id="lightG6" class="color-default"></article>
     <article id="light5" class="color-default"></article>
     <article id="light6" class="color-default"></article>
   </div>
 
   <div class="container">
-    <article id="" class="color-default"></article>
-    <article id="" class="color-default"></article>
+    <article id="lightG7" class="color-default"></article>
+    <article id="lightG8" class="color-default"></article>
     <article id="light7" class="color-default"></article>
     <article id="light8" class="color-default"></article>
   </div>
 
   <div class="container">
-    <article id="" class="color-default"></article>
-    <article id="" class="color-default"></article>
+    <article id="lightG9" class="color-default"></article>
+    <article id="lightG10" class="color-default"></article>
     <article id="light9" class="color-default"></article>
     <article id="light10" class="color-default"></article>
   </div>
