--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <button (click)="changeColor()">Cambio de color</button>
 
+<audio id="audio-alert">
+  <source src="../assets/sound/sound-f1.mp3" type="audio/mpeg">
+</audio>
+
+
 <div class="container-parent">
 
   <div class="container">
