--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,10 @@
   <source src="../assets/sound/sound-f1.mp3" type="audio/mpeg">
 </audio>
 
+<audio id="audio-start">
+  <source src="../assets/sound/sound-green.mp3" type="audio/mpeg">
+</audio>
+
 
 <div class="container-parent">
 
