--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<button (click)="changeColor()">Cambio de color</button>
+<button class="btn-start" (click)="changeColor()">Start</button>
 
 <audio id="audio-alert">
   <source src="../assets/sound/sound-f1.mp3" type="audio/mpeg">
